# neural_network

./: Cargo.toml
src/: __main.rs  main.rs
src/lib/: activations.rs  matrix.rs  network.rs
